tests/errors/lifetime/loan/mut_loan_blocks_mut_reborrow.err.expected
error: at 8:13: [LT-LoanConflict] In function 'f', block 'entry': cannot borrow as &mut 'x': already borrowed by 'r'
   |
 8 |             s = &mut x;
   |             ^^^^^^^^^^
  = note: borrow of 'x' occurs here
   |
 7 |             r = &mut x;
   |             ^^^^^^^^^^
  hint: the borrow of 'r' is active until its last use or explicit unborrow.
